# grepdown

./: LICENSE.md  README.md  test.md
crates/cli/: Cargo.toml
crates/cli/src/: cmd.rs  main.rs
crates/cli/src/cmd/: init.rs  lint.rs  search.rs
crates/grepdown-lib/: Cargo.toml
crates/grepdown-lib/benches/: search.rs
crates/grepdown-lib/src/: error.rs  lib.rs  lint.rs  project.rs  search.rs
crates/grepdown-lib/src/db/: init.rs  parse.rs
crates/grepdown-lib/src/db/migrations/: 0002_tags_fts.sql
crates/mddb/: Cargo.toml
crates/mddb/benches/: search.rs
crates/mddb/examples/: test_links.rs
crates/mddb/src/: db.rs  error.rs  frontmatter.rs  lib.rs  lint.rs  project.rs  search.rs
crates/mddb/src/db/: init.rs  parse.rs
crates/mddb/src/db/migrations/: 0001_init.sql  0003_link_graph.sql  0004_drop_metadata.sql  0005_lint_versioning.sql
docs/: link_graph_design.md  testing-cli-crates.md
scripts/: setup-bench-data.sh
