[package]
name = "mddb"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
log = "0.4"
rayon = "1.12.0"
walkdir = "2.5.0"
blake3 = "1.8.5"
serde_yaml = "0.9"
pulldown-cmark = "0.13"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "search"
harness = false
